fixed placement of native libs

--- a/build.xml
+++ b/build.xml
@@ -239,14 +239,18 @@
             <fileset dir="locale"/>
         </copy>
         <copy file="${dist.dir}/tinyMediaManager.exe" tofile="${build.dir}/tinyMediaManager.new" />
-    	<copy file="${dist.dir}/tinyMediaManagerUpd.exe" tofile="${build.dir}/tinyMediaManagerUpd.new" />
+    	  <copy file="${dist.dir}/tinyMediaManagerUpd.exe" tofile="${build.dir}/tinyMediaManagerUpd.new" />
         <copy file="${dist.dir}/tinyMediaManagerCMD.exe" tofile="${build.dir}/tinyMediaManagerCMD.new" />
         <copy file="${dist.dir}/tinyMediaManager.sh" tofile="${build.dir}/tinyMediaManager.sh" />
-    	<copy file="${dist.dir}/tinyMediaManagerUpdater.sh" tofile="${build.dir}/tinyMediaManagerUpdater.sh" />
+    	  <copy file="${dist.dir}/tinyMediaManagerUpdater.sh" tofile="${build.dir}/tinyMediaManagerUpdater.sh" />
         <copy file="${dist.dir}/tinyMediaManagerCMD.sh" tofile="${build.dir}/tinyMediaManagerCMD.sh" />
-    	<copy file="AppBundler/tinyMediaManagerOSX.sh" tofile="${build.dir}/tinyMediaManagerOSX.sh" />
-    	<copy file="AppBundler/JavaApplicationStub.new" tofile="${build.dir}/JavaApplicationStub.new" />
+    	  <copy file="AppBundler/tinyMediaManagerOSX.sh" tofile="${build.dir}/tinyMediaManagerOSX.sh" />
+    	  <copy file="AppBundler/JavaApplicationStub.new" tofile="${build.dir}/JavaApplicationStub.new" />
         <copy file="AppBundler/getdown.jar" tofile="${build.dir}/getdown-new.jar" />
+    	  <!-- we cannot place the native libs in the native folder because there is no way to change java.library.path at runtime -->
+    	  <copy file="AppBundler/libquaqua.jnilib" tofile="${build.dir}/libquaqua.jnilib" />
+    	  <copy file="AppBundler/libquaqua64.jnilib" tofile="${build.dir}/libquaqua64.jnilib" />
+    	  <copy file="AppBundler/libquaqua64.dylib" tofile="${build.dir}/libquaqua64.dylib" />
 
         <!-- finally create checksums -->
         <taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask" 
