--- a/build.xml
+++ b/build.xml
@@ -174,6 +174,18 @@
         <!-- echo message="${gd.code}" /-->
         <replace file="${build.dir}/getdown.txt" token="%CODELIBS%" value="${gd.code}"/>
 
+        <copy file="AppBundler/launch.jnlp" tofile="${build.dir}/launch.jnlp" />
+        <pathconvert property="webstart" refid="classpath.default" pathsep="">
+            <mapper>
+                <chainedmapper>
+                    <flattenmapper />
+                    <globmapper from="*" to="        &lt;jar href=&quot;lib/*&quot; />${line.separator}" />
+                </chainedmapper>
+            </mapper>
+        </pathconvert>
+        <!-- echo message="${gd.code}" /-->
+        <replace file="${build.dir}/launch.jnlp" token="%WEBSTARTLIBS%" value="${webstart}"/>
+
         <pathconvert property="gd.locale" pathsep="">
             <mapper>
                 <chainedmapper>
