--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="locale"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
-	<classpathentry kind="lib" path="lib/objectdb.jar"/>
 	<classpathentry kind="lib" path="lib/Scaling-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/commons-codec.jar"/>
@@ -27,7 +26,7 @@
 	<classpathentry kind="lib" path="lib/resources.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-annotations.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-core.jar"/>
-	<classpathentry kind="lib" path="lib/jackson-databind.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind.jar" sourcepath="/home/manuel/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.4.2/jackson-databind-2.4.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jna.jar"/>
 	<classpathentry kind="lib" path="lib/platform.jar"/>
 	<classpathentry kind="lib" path="lib/fanarttvapi.jar" sourcepath="buildsupport/fanarttvapi-1.4-sources.jar"/>
@@ -55,5 +54,6 @@
 	<classpathentry kind="lib" path="lib/gson.jar"/>
 	<classpathentry kind="lib" path="lib/image-viewer.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-common.jar"/>
+	<classpathentry kind="lib" path="lib/h2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
