added Rotten Tomatoes scraper

--- a/.classpath
+++ b/.classpath
@@ -55,5 +55,6 @@
 	<classpathentry kind="lib" path="lib/gson.jar"/>
 	<classpathentry kind="lib" path="lib/image-viewer.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-common.jar"/>
+	<classpathentry kind="lib" path="lib/rottentomatoesapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
