refactoring of MediaTrailer/MovieTrailer

--- a/objectdb.conf
+++ b/objectdb.conf
@@ -48,6 +48,9 @@
 	    <class name="TvShowEpisode" new-name="org.tinymediamanager.core.tvshow.entities.TvShowEpisode" />
 	    <class name="TvShowActor" new-name="org.tinymediamanager.core.tvshow.entities.TvShowActor" />
 	  </package>
+	  <package name="org.tinymediamanager.scraper">
+        <class name="MediaTrailer" new-name="org.tinymediamanager.core.movie.entities.MovieTrailer" />
+      </package>
 	</schema>
 
 	<server>
