--- a/.classpath
+++ b/.classpath
@@ -50,10 +50,19 @@
 	<classpathentry kind="lib" path="lib/JTattoo.jar"/>
 	<classpathentry kind="lib" path="lib/api-common.jar"/>
 	<classpathentry kind="lib" path="lib/LightBox.jar"/>
-	<classpathentry kind="lib" path="lib/trakt-java.jar" sourcepath="buildsupport/trakt-java-3.1.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/image-viewer.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-common.jar"/>
 	<classpathentry kind="lib" path="lib/rottentomatoesapi.jar"/>
 	<classpathentry kind="lib" path="lib/jtidy.jar"/>
+	<classpathentry kind="lib" path="lib/json-20131018.jar"/>
+	<classpathentry kind="lib" path="lib/quaqua-filechooser-only.jar"/>
+	<classpathentry kind="lib" path="lib/okhttp-urlconnection.jar"/>
+	<classpathentry kind="lib" path="lib/org.apache.oltu.oauth2.client.jar"/>
+	<classpathentry kind="lib" path="lib/org.apache.oltu.oauth2.common.jar"/>
+	<classpathentry kind="lib" path="lib/trakt-java.jar"/>
+	<classpathentry kind="lib" path="lib/gson.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time.jar"/>
+	<classpathentry kind="lib" path="lib/okhttp.jar"/>
+	<classpathentry kind="lib" path="lib/retrofit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
