--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.tinymediamanager</groupId>
+        <artifactId>tmm-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>org.tinymediamanager</groupId>
     <artifactId>tmm-main</artifactId>
     <version>2.7-SNAPSHOT</version>
+
     <name>tinyMediaManager</name>
     <!-- problematic -->
     <!-- -->
@@ -12,7 +21,9 @@
     <!-- https://java.net/projects/javagraphics/sources/svn/show/trunk/src/com/bric?rev=2250 -->
     <!-- https://github.com/harryjoy/Light-box-jar/tree/master/harsh/p/raval/lightbox -->
     <!-- -->
-    <!-- mvn install:install-file -DlocalRepositoryPath=repo -DcreateChecksum=true -Dpackaging=jar -Dfile=lib\resources.jar -DgroupId=org.tinymediamanager -DartifactId=resources -Dversion=1.0.0 -->
+    <!-- mvn install:install-file -DlocalRepositoryPath=repo -DcreateChecksum=true 
+        -Dpackaging=jar -Dfile=lib\twinkle.jar -DgroupId=ch.swingfx -DartifactId=twinkle 
+        -Dversion=1.0.0 -->
     <!-- -->
     <!-- -->
     <repositories>
@@ -25,73 +36,61 @@
             <id>aparsons-maven-repository</id>
             <url>https://github.com/aparsons/maven-repository/raw/master</url>
         </repository>
-        <repository>
-            <id>tmm</id>
-            <url>http://repository-tinymediamanager.forge.cloudbees.com/release/</url>
-        </repository>
     </repositories>
-    <build>
-        <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>test</testSourceDirectory>
-        <resources>
-            <resource>
-                <directory>src</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-            <resource>
-                <directory>locale</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
-        </resources>
-        <testResources>
-            <testResource>
-                <directory>test</directory>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </testResource>
-        </testResources>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12-beta-2</version>
-            <scope>test</scope>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>api-scraper</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>scraper-anidb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>scraper-fanarttv</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- dependency> <groupId>org.tinymediamanager</groupId> <artifactId>scraper-imdb</artifactId> 
+            <version>1.0-SNAPSHOT</version> </dependency -->
+        <!-- dependency> <groupId>org.tinymediamanager</groupId> <artifactId>scraper-kodi</artifactId> 
+            <version>1.0-SNAPSHOT</version> </dependency -->
+        <dependency>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>scraper-ofdb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>scraper-rottentomatoes</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>scraper-tmdb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tinymediamanager</groupId>
+            <artifactId>scraper-tvdb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- dependency> <groupId>org.tinymediamanager</groupId> <artifactId>trakt-java</artifactId> 
+            <version>4.2.1</version> </dependency -->
+        <dependency>
+            <groupId>com.uwetrottmann</groupId>
+            <artifactId>trakt-java</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.tinymediamanager</groupId>
             <artifactId>resources</artifactId>
             <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.omertron</groupId>
-            <artifactId>themoviedbapi</artifactId>
-            <version>3.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.omertron</groupId>
-            <artifactId>fanarttvapi</artifactId>
-            <version>1.5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.omertron</groupId>
-            <artifactId>thetvdbapi</artifactId>
-            <version>1.6</version>
         </dependency>
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
@@ -104,29 +103,9 @@
             <version>1.9.0</version>
         </dependency>
         <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.9</version>
-        </dependency>
-        <dependency>
             <groupId>com.jtattoo</groupId>
             <artifactId>JTattoo</artifactId>
             <version>1.6.10</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.imgscalr</groupId>
@@ -137,11 +116,6 @@
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
             <version>4.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.uwetrottmann</groupId>
-            <artifactId>trakt-java</artifactId>
-            <version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>com.floreysoft</groupId>
@@ -159,14 +133,9 @@
             <version>1.7.2</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
-        </dependency>
-        <dependency>
             <groupId>com.objectdb</groupId>
             <artifactId>objectdb</artifactId>
-            <version>2.5.7_04</version>
+            <version>2.6.2</version>
         </dependency>
         <dependency>
             <groupId>org.kohsuke.redstone</groupId>
@@ -183,6 +152,12 @@
             <artifactId>twinkle</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jtidy</groupId>
+            <artifactId>jtidy</artifactId>
+            <version>r938</version>
+        </dependency>
+
         <!-- non mavenized ones -->
         <dependency>
             <groupId>chrriis.dj</groupId>
@@ -210,4 +185,51 @@
             <version>1.0.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>locale</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>test</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <stripVersion>true</stripVersion>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
