--- a/branches/tinyMediaManager-PLUGIN/pom.xml
+++ b/branches/tinyMediaManager-PLUGIN/pom.xml
@@ -14,6 +14,16 @@
     <version>2.7-SNAPSHOT</version>
 
     <name>tinyMediaManager</name>
+
+    <scm>
+        <url>https://tinymediamanager.googlecode.com/svn/branches/tinyMediaManager-PLUGIN</url>
+        <connection>scm:svn:https://tinymediamanager.googlecode.com/svn/branches/tinyMediaManager-PLUGIN</connection>
+        <developerConnection>scm:svn:https://tinymediamanager.googlecode.com/svn/branches/tinyMediaManager-PLUGIN</developerConnection>
+    </scm>
+    <properties>
+        <transifexURL>https://www.transifex.com/api/2/project/tinymediamanager/resource/</transifexURL>
+    </properties>
+
     <!-- problematic -->
     <!-- -->
     <!-- https://code.google.com/p/jsplitbutton/ -->
@@ -37,6 +47,8 @@
             <url>https://github.com/aparsons/maven-repository/raw/master</url>
         </repository>
     </repositories>
+    <!-- pluginRepositories> <pluginRepository> <id>weasis</id> <url>http://dicom.vital-it.ch:8087/nexus/content/groups/public</url> 
+        </pluginRepository> </pluginRepositories -->
 
     <dependencies>
         <dependency>
@@ -211,8 +223,88 @@
                 </excludes>
             </testResource>
         </testResources>
+
         <plugins>
             <plugin>
+                <!-- get SVN/GIT revision numbers -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <!-- generate a timestamp -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.9.1</version>
+                <executions>
+                    <execution>
+                        <id>timestamp-property</id>
+                        <goals>
+                            <goal>timestamp-property</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <name>timestamp</name>
+                            <pattern>yyyy-MM-dd HH:mm</pattern>
+                            <timeZone>GMT+1</timeZone>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- plugin>
+                <!- - enhance ObjectDB classes - ->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <executions>
+                    <execution>
+                        <id>enhance</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.objectdb.Enhancer</mainClass>
+                            <arguments>
+                                <argument>-s</argument>
+                                <argument>org.tinymediamanager.core.*</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathLayoutType>custom</classpathLayoutType>
+                            <customClasspathLayout>lib/${artifact.artifactId}.${artifact.extension}</customClasspathLayout>
+                            <mainClass>org.tinymediamanager.TinyMediaManager</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <SplashScreen-Image>resources/splashscreen.png</SplashScreen-Image><!-- 
+                                TODO: -->
+                            <Build-Nr>${buildNumber}</Build-Nr>
+                            <Build-Date>${timestamp}</Build-Date>
+                            <Build-By>${user.name}</Build-By>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- copies our dependencies WITHOUT version number for packaging -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.10</version>
@@ -223,11 +315,41 @@
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
-                        <configuration>
-                            <stripVersion>true</stripVersion>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <includeScope>compile</includeScope>
+                    <stripVersion>true</stripVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- call our ant file, since it's too complicated to do 
+                    our packaging solely in maven -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>dist</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <exportAntProperties>true</exportAntProperties>
+                    <target>
+                        <property name="tmmName" value="${project.artifactId}" />
+                        <property name="tmmVersion" value="${project.version}" />
+                        <property name="tmmRevision" value="${buildNumber}" />
+                        <property name="tmmTimestamp" value="${timestamp}" />
+
+                        <ant antfile="${project.basedir}/ant-package.xml">
+                            <target name="package-app" />
+                        </ant>
+                    </target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
